# tend

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  README.md  _typos.toml  biome.jsonc  cliff.toml  deny.toml  mise.toml  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.github/workflows/: ci.yml
.mise/: prepare-state.toml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
cli/: Cargo.toml
cli/src/: args.rs  ipc.rs  main.rs  pty.rs
cli/tests/: happy_path.rs
cli/tests/common/: mod.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
scripts/: install-latest.sh  release.sh  snap.sh
specs/001-cross-repo-workbench/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cross-repo-workbench/checklists/: requirements.md
specs/001-cross-repo-workbench/contracts/: README.md  daemon-ipc.md  tauri-commands.md
specs/002-adaptive-ui/: plan.md  research.md  spec.md
src/: app.css  app.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20260411000001_init.sql
src-tauri/src/: env.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: companions.rs  events.rs  mod.rs  notifications.rs  projects.rs  scratchpad.rs  sessions.rs  workspace.rs
src-tauri/src/companion/: mod.rs
src-tauri/src/daemon/: handlers.rs  mod.rs  server.rs
src-tauri/src/db/: mod.rs  queries.rs
src-tauri/src/model/: alert.rs  companion.rs  layout.rs  mod.rs  note.rs  notification.rs  project.rs  reminder.rs  session.rs  workspace.rs
src-tauri/src/notifications/: alerts.rs  dispatch.rs  mod.rs  preferences.rs
src-tauri/src/project/: mod.rs  watcher.rs
src-tauri/src/scratchpad/: mod.rs  notes.rs  overview.rs  reminders.rs
src-tauri/src/session/: activity.rs  heuristic.rs  live.rs  mod.rs  pty.rs  reaper.rs  recovery.rs  replay.rs  service.rs  status.rs  supervisor.rs
src-tauri/src/workspace/: layouts.rs  mod.rs
src-tauri/tests/: cli_to_list.rs  contract.rs  integration.rs  session_crash.rs  startup_reattach.rs
src-tauri/tests/common/: mod.rs
src-tauri/tests/contract/: alerts.rs  companion.rs  layouts.rs  notes.rs  notification_preferences.rs  overview.rs  project_archive.rs  project_list.rs  project_register.rs  project_update.rs  reminders.rs  session_activate.rs  session_io.rs  session_list.rs  session_spawn.rs  session_summary.rs  session_visibility.rs  workspace.rs
src-tauri/tests/contract/daemon/: hello.rs  lifecycle.rs  mod.rs  register_session.rs  update_status.rs
src-tauri/tests/integration/: activity_override.rs  activity_ring_buffer.rs  alert_autoclear.rs  companion_idempotency.rs  companion_worktree.rs  heuristic_false_positives.rs  layout_missing.rs  needs_input_heuristic.rs  perf_sanity.rs  quiet_hours.rs  reminder_done.rs  scratchpad_archive.rs  scratchpad_session_lifecycle.rs  session_end_lifecycle.rs  session_to_scratchpad.rs  workspace_restore.rs
src/lib/api/: companions.ts  events.ts  invoke.ts  notifications.ts  projects.test.ts  projects.ts  scratchpad.ts  sessions.ts  workspace.ts
src/lib/components/: AddSlotZone.svelte  AddSlotZone.test.ts  AgentPane.svelte  AlertBar.svelte  AlertBar.test.ts  ColorSwatchPicker.svelte  ColorSwatchPicker.test.ts  CommandPalette.svelte  CommandPalette.test.ts  CompanionPane.svelte  CrossProjectOverview.svelte  FilterChips.svelte  HamburgerButton.svelte  HamburgerButton.test.ts  LayoutSwitcher.svelte  MainTabs.svelte  MainTabs.test.ts  NavRail.svelte  NavRail.test.ts  PageHeader.svelte  PaneSlot.svelte  PaneSlot.test.ts  PaneWorkspace.svelte  PaneWorkspace.test.ts  Scratchpad.svelte  SessionList.svelte  SessionList.test.ts  SessionRow.svelte  SessionRow.test.ts  SettingsDialog.svelte  Sidebar.svelte  SpawnSessionDialog.svelte  SpinnerIcon.svelte  SpinnerIcon.test.ts  SplitView.svelte
src/lib/components/pages/: DashboardPage.svelte  ProjectsPage.svelte  SettingsPage.svelte
src/lib/stores/: overview.svelte.ts  projects.svelte.ts  scratchpad.svelte.ts  sessions.svelte.ts  workspace.svelte.ts
src/lib/types/: pane.ts
src/lib/util/: age.ts  agentKind.test.ts  agentKind.ts  filterSession.ts  isEditableTarget.test.ts  isEditableTarget.ts  markdown.ts  projectColor.ts
src/lib/xterm/: createTerminal.ts
src/routes/: +page.svelte
tests/e2e/: alerts.spec.ts  first-run.spec.ts  fixtures.ts  helpers.ts  mock-tauri.js  scratchpad.spec.ts  session-lifecycle.spec.ts  split-view.spec.ts  workspace-restore.spec.ts
tests/fixtures/ptyoutput/: agent_narration_with_gt.txt  code_with_password_literal.txt  diff_with_y_N.txt  mixed_ansi_prompts.txt  readme_render.txt
