[workspace]
resolver = "2"
members = ["protocol", "src-tauri", "cli"]

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
repository = "https://github.com/knitli/agentui"
authors = ["knitli"]

[workspace.dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "io-util", "net", "sync", "fs", "process", "time", "signal"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
base64 = "0.22"

# Shared wire-format crate (single source of truth for daemon IPC)
agentui-protocol = { path = "protocol" }

[profile.dev]
debug = 1

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
