[workspace]
resolver = "3"
members = ["cli", "protocol", "src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "Tend is a local agent orchestration UI for human-in-the-loop automation"
readme = "README.md"
homepage = "https://knitli.com"
repository = "https://github.com/knitli/tend"
license-file = "LICENSE"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = [
  "chrono",
  "macros",
  "migrate",
  "runtime-tokio-rustls",
  "sqlite"
] }
thiserror = "1"
tokio = { version = "1.40", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "signal",
  "sync",
  "time"
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Shared wire-format crate (single source of truth for daemon IPC)
tend-protocol = { path = "protocol" }

[profile.dev]
debug = 1

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
