[package]
name = "agentui-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "agentui run: CLI wrapper that registers external agent sessions with the workbench over IPC"

[[bin]]
name = "agentui"
path = "src/main.rs"

[dependencies]
# Shared wire format — single source of truth. No path-dep into src-tauri/.
agentui-protocol = { workspace = true }

clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
portable-pty = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3"
