[package]
name = "tend-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "tend run: CLI wrapper that registers external agent sessions with the workbench over IPC"
repository.workspace = true
license.workspace = true
# Internal workspace member; never published to crates.io.
publish = false

[[bin]]
name = "tend"
path = "src/main.rs"

[dependencies]
# Shared wire format — single source of truth. No path-dep into src-tauri/.
tend-protocol = { workspace = true }

anyhow = { workspace = true }
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
dirs = { workspace = true }
libc = "0.2.184"
portable-pty = "0.9.0"
serde = { workspace = true }
serde_json = { workspace = true }
term_size = "0.3.0"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3"
