[package]
name = "tend-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Wire format for the tend daemon IPC protocol. Shared by src-tauri and cli."
repository.workspace = true
license.workspace = true
publish = false

# T003b: minimal deps only. No tokio, no sqlx, no tauri. This crate must stay
# build-cheap and reuse-safe so both src-tauri and cli can depend on it without
# dragging their dep graphs into one another.
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
