[package]
name = "tend-workbench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "tend cross-repo workbench: Tauri 2 desktop app + backend daemon"
homepage.workspace = true
repository.workspace = true
license.workspace = true
# Internal workspace member; never published to crates.io. We have to distribute as an OS binary, not a library or set of crates.
publish = false

[lib]
name = "tend_workbench"
path = "src/lib.rs"

[[bin]]
name = "tend-workbench"
path = "src/main.rs"

[dependencies]
# Shared wire format — single source of truth. No local redefinition of Request/Response/ErrorCode.
tend-protocol = { workspace = true }

# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"

sqlx = { workspace = true }
# Async runtime + DB
tokio = { workspace = true }

# PTY + process observation
portable-pty = "0.8"
sysinfo = "0.30"

# FS watching
notify = "6"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

anyhow = { workspace = true }
# Errors + diagnostics
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Encoding
base64 = { workspace = true }

# Time + paths
chrono = { workspace = true }
dirs = { workspace = true }
libc = "0.2.184"

# Tempfile for shell-env capture (writing the env dump to a tempfile keeps rc-file
# stdout pollution out of the parsed payload).
tempfile = "3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
